--- a/WPFNodePad/WPFNodePad.csproj
+++ b/WPFNodePad/WPFNodePad.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="icons\collapse_all_icon_136745.png" />
     <None Remove="icons\copy_paste_document_file_1557.png" />
     <None Remove="icons\diskette_save_saveas_1514.png" />
+    <None Remove="icons\ic_done_all_128_28243.png" />
     <None Remove="icons\Newfile_page_document_empty_6315.png" />
     <None Remove="icons\open-file256_25211.png" />
     <None Remove="icons\redoarrow_rehace_1547.png" />
@@ -23,8 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="icons\collapse_all_icon_136745.png" />
     <Resource Include="icons\copy_paste_document_file_1557.png" />
     <Resource Include="icons\diskette_save_saveas_1514.png" />
+    <Resource Include="icons\ic_done_all_128_28243.png" />
     <Resource Include="icons\Newfile_page_document_empty_6315.png" />
     <Resource Include="icons\open-file256_25211.png" />
     <Resource Include="icons\redoarrow_rehace_1547.png" />
